# backend-tin-chi-carbon-migrate-rust

./: .env.example  Cargo.toml
src/: database.rs  main.rs
src/handlers/: auth.rs  user.rs
src/models/: auth.rs  mod.rs  user.rs
src/routers/: auth.rs  mod.rs  user.rs
src/utils/: config.rs  jwt.rs  mod.rs
