[package]
name = "BackendTinChiCarbon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.43"
