[package]
name = "BackendTinChiCarbon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "mysql",
  "chrono",
  "macros"
] }

tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = {version = "0.6.8" ,features=["trace"]}
trace = "0.1.7"
tracing = "0.1.43"
